<resources>
    <string name="app_name">Infinite Aww</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="gif">GIF</string>
    <string name="link">Link</string>
    <string name="send">Send</string>
    <string name="favs">Favs</string>
    <string name="edit">Edit</string>
    <string name="r_aww">r/aww</string>
    <string name="r_corgi">r/corgi</string>
    <string name="r_rarepuppers">r/rarepuppers</string>
    <string name="r_eyebleach">r/eyebleach</string>
    <string name="image">image</string>
    <string name="r_catpictures">r/catpictures</string>
    <string name="r_cats">r/cats</string>
    <string name="r_dogpictures">r/dogpictures</string>
    <string name="r_redpandas">r/redpandas</string>
    <string name="r_rabbits">r/rabbits</string>
    <string name="r_pomeranians">r/pomeranians</string>
    <string name="r_cute">r/cute</string>
    <string name="r_kitty">r/kitty</string>
    <string name="r_foxes">r/foxes</string>
    <string name="edit_columns">Edit Columns</string>
    <string name="columns">Columns: %1$d</string>
    <string name="fetch_error">No images found. Please check your connection and swipe down to refresh.</string>
    <string name="no_favorites">No favorites. Star some of your favorite photos &amp; videos and they\'ll show up here!</string>
</resources>
