<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.SubsDialog">

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/aww"
        android:text="@string/r_aww" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/corgi"
        android:text="@string/r_corgi" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/rarepuppers"
        android:text="@string/r_rarepuppers" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/eyebleach"
        android:text="@string/r_eyebleach" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/kitty"
        android:text="@string/r_kitty" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/foxes"
        android:text="@string/r_foxes" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/cute"
        android:text="@string/r_cute" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/pomeranians"
        android:text="@string/r_pomeranians" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/rabbits"
        android:text="@string/r_rabbits" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/redpandas"
        android:text="@string/r_redpandas" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/dogpictures"
        android:text="@string/r_dogpictures" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/catpictures"
        android:text="@string/r_catpictures" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:id="@+id/cats"
        android:text="@string/r_cats" />
</LinearLayout>